buildscript {
    ext {
        springCloudVersion = "2023.0.2"
        restdocsApiSpecVersion = '0.17.1'
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'org.hidetake.swagger.generator' version '2.18.2'
}

group = 'com.donkeys_today'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //SECURITY
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.1'

    // Client Secret 생성 라이브러리
    implementation 'com.nimbusds:nimbus-jose-jwt:3.10'

    //Api
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    testImplementation 'io.rest-assured:spring-mock-mvc:5.4.0'
    testImplementation "io.rest-assured:json-path:5.4.0"
    testImplementation "io.rest-assured:xml-path:5.4.0"

    //actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //notification
    implementation 'com.google.firebase:firebase-admin:9.3.0'

    //profanityFilter
    implementation 'io.github.vaneproject:badwordfiltering:1.0.0'

}

tasks.named('test') {
    useJUnitPlatform()
}

//Jar 로 빌드
bootJar{

}

//Feign
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}


